<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <android.support.v7.widget.CardView
        android:id="@+id/quiz_cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_btn"
        android:layout_marginBottom="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--   result   -->

            <RelativeLayout
                android:id="@+id/quiz_result_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/quiz_correct_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/quiz_correct_percentage"
                    android:layout_alignLeft="@id/quiz_correct_percentage"
                    android:layout_alignStart="@id/quiz_correct_percentage"
                    android:layout_marginBottom="16dp"
                    android:text="@string/correct_percentage" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/quiz_correct_percentage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num_correct" />

                    <TextView
                        android:id="@+id/quiz_num_correct_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/green"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/num_wrong" />

                    <TextView
                        android:id="@+id/quiz_num_wrong_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/red"
                        android:textSize="24sp" />

                </LinearLayout>

            </RelativeLayout>

            <!--   question   -->

            <RelativeLayout
                android:id="@+id/quiz_question_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">
                <ImageButton
                    android:id="@+id/sound"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_audio"/>
                <TextView
                    android:id="@+id/quiz_question_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:textAlignment="center"
                    android:id="@+id/quiz_input_et"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/quiz_question_tv"
                    android:clickable="true"
                    android:focusableInTouchMode="true" />

                <ImageView
                    android:id="@+id/quiz_result_iv"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

        </FrameLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/quiz_ok_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/confirm"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/quiz_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@android:color/white" />

    </FrameLayout>

</RelativeLayout>